another attempt at that horizontal scroll issue

--- a/style.css
+++ b/style.css
@@ -2,9 +2,10 @@ body {
   padding: 0;
   margin: 0;
   font-weight: normal;
-  max-width: 100%;
-  overflow-x: hidden;
-  box-sizing: border-box;
+  max-width: 100vw;
+  overflow-x: hidden !important;
+  box-sizing: border-box !important;
+  background-color: #111;
 }
 html {
   font-family: Arial, Helvetica, sans-serif;
@@ -23,8 +24,6 @@ html {
   */
   font-display: auto;
 }
-
-
 
 .splash {
   font-family: "Marck Script";
@@ -48,7 +47,7 @@ img {
 #navbar {
   background: white;
   position: fixed;
-  width: 100%;
+  width: 100vw;
   top: 0px;
   z-index: 99999999;
   transition: all .4s ease;
@@ -117,21 +116,22 @@ a {
   align-items: center;
   justify-content: center;
   text-align: center;
-  padding: 20px;
-}
-#projects {
   padding-top: 20px;
   padding-bottom: 20px;
+  background-color: white;
+}
+#projects {
+  padding-top: 35px;
+  padding-bottom: 35px;
   text-align: center;
   color: white;
   background-color: #111;
+  justify-items: center;
 }
 #project-header{
   font-size: 40px;
 }
 .project-tile {
-  margin-left: auto;
-  margin-right: auto;
   width: 80vw;
   height: 100vh;
   padding-top: 30px;
